# nrf52840-experiments

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/workflows/: rust.yml
adafruit-feather-nrf52840-express/: Cargo.toml  Embed.toml  README.md
adafruit-feather-nrf52840-express/.cargo/: config
adafruit-feather-nrf52840-express/examples/: feather-express-led.rs  feather-express-listener.rs  feather-express-psila.rs
doc/: adafruit-feather-color-light.md
esercom/: Cargo.toml
esercom/src/: error.rs  lib.rs  slip.rs
host/: Cargo.toml  README.md
host/src/: main.rs  parser.rs  security.rs
nrf52-aes-128/: Cargo.toml  README.md  build.rs
nrf52-aes-128/src/: asm_aes.rs  cryptocell.rs  ecb.rs  lib.rs  nrf_aes.rs  rust_aes.rs
nrf52-cryptocell/: .gitignore  Cargo.toml  README.md  bindings_header.rs  build.rs  generate  wrapper.h
nrf52-cryptocell/.cargo/: config
nrf52-cryptocell/src/: lib.rs  nrf_cc310.rs
nrf52-radio-802154/: Cargo.toml  README.md
nrf52-radio-802154/.cargo/: config
nrf52-radio-802154/examples/: associate_rtfm.rs  beacon_rtfm.rs  receive_rtfm.rs
nrf52-radio-802154/src/: lib.rs  network_layer.rs  radio.rs  timer.rs
nrf52-radio-802154/src/mac/: service.rs
nrf52-utils/: Cargo.toml
nrf52-utils/src/: lib.rs  logger.rs  timer.rs
nrf52840-dk/: .gitignore  Cargo.toml  README.md  jlink.gdb  jlinkgdb
nrf52840-dk/.cargo/: config
nrf52840-dk/examples/: associate.rs  beacon.rs  beacon_rtfm.rs  energy_detect.rs  nrf52840-dk-aes-128.rs  nrf52840-dk-associate.rs  nrf52840-dk-beacon.rs  nrf52840-dk-blinky.rs  nrf52840-dk-ccm-star.rs  nrf52840-dk-energy-detect.rs  nrf52840-dk-listener.rs  nrf52840-dk-psila.rs  nrf52840-dk-receive.rs  receive.rs  receive_rtfm.rs
nrf52840-dk/src/: lib.rs
nrf52840-dongle/: .gitignore  Cargo.toml  README.md  jlinkgdb
nrf52840-dongle/examples/: beacon.rs  nrf52850-dongle-beacon.rs
nrf52840-mdk/: Cargo.toml  Embed.toml  README.md  nrf52840-mdk-listener  openocd.conf  openocd.gdb
nrf52840-mdk/.cargo/: config
nrf52840-mdk/examples/: associate.rs  beacon.rs  nrf52840-mdk-associate.rs  nrf52840-mdk-beacon.rs  nrf52840-mdk-key-hash.rs  nrf52840-mdk-listener.rs
