[workspace]
members = [
    "adafruit-feather-nrf52840-express",
    "nrf52-aes-128",
    "nrf52-cryptocell",
    "nrf52-utils",
    "nrf52-radio-802154",
    "nrf52840-dk",
    "nrf52840-mdk"
    ]

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
