[package]
name = "adafruit-feather-nrf52840-express"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
categories = [ "hardware-support", "embedded", "no-std", ]
description = "IEEE 802.15.4 experiments with nRF52840 radio"
keywords = [ "arm", "cortex-m", "nrf52840", ]
license = "MIT"
readme = "README.md"
edition = "2018"

[dev-dependencies]
nrf52840-pac = "0.9"
nrf52840-hal = "0.10"
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-itm = "0.4"
cortex-m-rtic = "0.5"
bbqueue = "0.4"
ieee802154 = "0.3"
esercom = { git = "https://github.com/blueluna/esercom.git", branch = "master" }
nrf52-radio-802154 = { git = "https://github.com/blueluna/nrf52-verktyg", features = ["52840"] }
nrf52-cryptocell = { path = "../nrf52-cryptocell" }
nrf52-utils = { path = "../nrf52-utils" }

psila-crypto = { git = "https://github.com/blueluna/psila.git" }
psila-data = { git = "https://github.com/blueluna/psila.git", features = ["core", "defmt-default"] }
psila-service = { git = "https://github.com/blueluna/psila.git", features = ["core"] }

[dev-dependencies.defmt]
git = "https://github.com/knurling-rs/defmt"
branch = "main"