[package]
name = "adafruit-feather-nrf52840-express"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
categories = [ "hardware-support", "embedded", "no-std", ]
description = "IEEE 802.15.4 experiments with nRF52840 radio"
keywords = [ "arm", "cortex-m", "nrf52840", ]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
defmt = "0.2"
defmt-rtt = "0.2"
panic-probe = "0.2"

[dev-dependencies]
nrf52840-pac = "0.9"
nrf52840-hal = "0.12"
panic-itm = "0.4"
cortex-m-rtic = "0.5"
rtt-target = { version = "0.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
bbqueue = "0.4"
ieee802154 = "0.3"
byteorder = { version = "1", default-features = false }
esercom = { git = "https://github.com/blueluna/esercom.git", branch = "master" }
nrf52-cryptocell = { path = "../nrf52-cryptocell" }
psila-nrf52 = { git = "https://github.com/blueluna/psila-nrf52.git", features = ["52840"] }

psila-crypto = { git = "https://github.com/blueluna/psila.git" }
psila-data = { git = "https://github.com/blueluna/psila.git", features = ["core"] }
psila-service = { git = "https://github.com/blueluna/psila.git", features = ["core", "defmt-default"] }

smart-leds-trait = "0.2.0"
smart-leds = "0.3.0"
nrf-smartled = { git = "https://github.com/blueluna/nrf-smartled.git", branch="main", features = ["52840"] }
palette = { version = "0.5", default-features = false, features = ["libm"] }

[features]
# set logging levels here
default = [
  "defmt-default",
  # "dependency-a/defmt-trace",
]

# do NOT modify these features
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
