[package]
name = "adafruit-feather-nrf52840-express"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
categories = [ "hardware-support", "embedded", "no-std", ]
description = "IEEE 802.15.4 experiments with nRF52840 radio"
keywords = [ "arm", "cortex-m", "nrf52840", ]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = "0.3"

[dev-dependencies]
nrf52840-pac = "0.11"
nrf52840-hal = "0.15"
panic-itm = "0.4"
cortex-m-rtic = "1.1"
bbqueue = "0.5"
ieee802154 = "0.3"
byteorder = { version = "1", default-features = false }
esercom = { git = "https://github.com/blueluna/esercom.git", branch = "master" }
nrf52-cryptocell = { path = "../nrf52-cryptocell" }
psila-nrf52 = { git = "https://github.com/blueluna/psila-nrf52.git", features = ["52840"] }

psila-crypto = { git = "https://github.com/blueluna/psila.git" }
psila-data = { git = "https://github.com/blueluna/psila.git", features = ["core"] }
psila-service = { git = "https://github.com/blueluna/psila.git", features = ["core"] }

smart-leds-trait = "0.2.0"
smart-leds = "0.3.0"
nrf-smartled = { git = "https://github.com/blueluna/nrf-smartled.git", branch="main", features = ["52840"] }
palette = { version = "0.5", default-features = false, features = ["libm"] }
