[package]
name = "nrf52840-host"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
byteorder = { version = "1", default-features = false }
slice-deque = "0.1.16"
ieee802154 = "0.3"
esercom = { path = "../esercom" }
zigbee-rs = { git = "https://github.com/blueluna/zigbee-rs", branch="master" }

[dependencies.serialport]
version = "3.2"
default-features = false
features = []
