[package]
name = "nrf52-aes-128"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
categories = [ "hardware-support", "embedded", "no-std", ]
description = "nRF52840 AES-128"
keywords = [ "nrf52840", "nrf52", "AES" ]
license = "MIT"
readme = "README.md"
repository="https://github.com/blueluna/nrf52840-dk-experiments"
edition = "2018"

[dependencies]
cty = "0.2.0"
aes = "0.3.2"
byteorder = { version = "1", default-features = false }
nrf52840-pac = "0.9"
#psila-crypto = { git = "https://github.com/blueluna/psila.git" }
psila-crypto = { path = "../../psila/psila-crypto" }

[build-dependencies]
cc = "1.0"
