[package]
name = "nrf52-radio-802154"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
categories = [ "hardware-support", "embedded", "no-std", ]
description = "IEEE 802.15.4 experiments with nRF52840 radio"
keywords = [ "arm", "cortex-m", "nrf52840", ]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
nrf52840-pac = "0.6.0"

[dev-dependencies]
nb = "~0.1"
nrf52840-dk-bsp = { git = "https://github.com/nrf-rs/nrf52-hal", branch = "master" }
nrf52840-hal = { git = "https://github.com/nrf-rs/nrf52-hal", branch = "master" }
esercom = { path = "../esercom" }
cortex-m = "0.5"
cortex-m-rt = "0.6.5"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
cortex-m-rtfm = "0.4"
ieee802154 = { git = "https://github.com/blueluna/ieee-802.15.4", branch = "messages" }

[features]
rt = ["nrf52840-hal/rt"]
default = ["rt"]
