[package]
name = "nrf52-radio-802154"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
categories = [ "hardware-support", "embedded", "no-std", ]
description = "IEEE 802.15.4 mode nRF52840 radio"
keywords = [ "nrf52840", "nrf52", "ieee802154", "WPAN" ]
license = "MIT"
readme = "README.md"
repository="https://github.com/blueluna/nrf52840-dk-experiments"
edition = "2018"

[dependencies]
nrf52840-pac = "0.6"
ieee802154 = "0.3"
cortex-m-semihosting = "0.3"
