[package]
name = "nrf52-utils"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
cortex-m = "0.6"
bbqueue = { git = "https://github.com/jonas-schievink/bbqueue.git", branch = "rubble" }
