[package]
name = "nrf52-utils"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
cortex-m = "0.6"
bbqueue = "0.4"
nrf52840-pac = "0.8"
