[package]
name = "nrf52840-dk"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
categories = [ "hardware-support", "embedded", "no-std", ]
description = "IEEE 802.15.4 experiments with nRF52840 radio"
keywords = [ "arm", "cortex-m", "nrf52840", ]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = "0.3"

[dev-dependencies]
nrf52840-pac = "0.11"
nrf52840-hal = "0.15"
cortex-m-rtic = "1.1"
bbqueue = "0.5"
ieee802154 = "0.3"
esercom = { git = "https://github.com/blueluna/esercom.git", branch = "master" }
psila-nrf52 = { git = "https://github.com/blueluna/psila-nrf52.git", features = ["52840"] }
nrf52-cryptocell = { path = "../nrf52-cryptocell" }
embedded-hal = { version = "0.2", features = ["unproven"] }

psila-crypto = { git = "https://github.com/blueluna/psila.git" }
psila-data = { git = "https://github.com/blueluna/psila.git", features = ["core"] }
psila-service = { git = "https://github.com/blueluna/psila.git", features = ["core"] }
