[package]
name = "nrf52840-dongle"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

[dev-dependencies]
nrf52840-pac = "0.6"
nrf52840-hal = "0.8"
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
cortex-m-rtfm = "0.4"
ieee802154 = "0.3"
nrf52-radio-802154 = { path = "../nrf52-radio-802154" }
