[package]
name = "nrf52840-dongle"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

[dev-dependencies]
nrf52840-pac = "0.8"
nrf52840-hal = "0.8"
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
cortex-m-rtfm = "0.4"
ieee802154 = { git = "https://github.com/braun-embedded/rust-ieee802.15.4.git", branch = "master" }
nrf52-radio-802154 = { path = "../nrf52-radio-802154" }
