[package]
name = "nrf52840-mdk"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

[dev-dependencies]
bbqueue = "0.5"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
defmt = "0.3"
defmt-rtt = "0.3"
esercom = { git = "https://github.com/blueluna/esercom.git", branch = "master" }
ieee802154 = "0.3"
nrf52-cryptocell = { path = "../nrf52-cryptocell" }
nrf52840-pac = "0.11"
nrf52840-hal = "0.15"
panic-probe = "0.3"
psila-crypto = { git = "https://github.com/blueluna/psila.git" }
psila-nrf52 = { git = "https://github.com/blueluna/psila-nrf52.git", features = ["52840"] }

