[package]
name = "nrf52840-mdk"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

[dev-dependencies]
bbqueue = "0.5"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
esercom = { git = "https://github.com/blueluna/esercom.git", branch = "master" }
ieee802154 = { git = "https://github.com/blueluna/ieee-802.15.4.git" }
nrf52840-pac = "0.12"
nrf52840-hal = "0.16"
panic-probe = "0.3"
psila-nrf52 = { git = "https://github.com/blueluna/psila-nrf52.git", features = ["52840"] }
